remove JVM memory settings, introduce new env var instead (#119)
* remove JVM memory settings, introduce new env var instead

* remove "disabledSchemes" JVM option

* use latest patch-level version of testEditorDropwizard